kubernetes-cluster/manifests/apps/blackbeard/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbeard
  namespace: media
spec:
  selector:
    matchLabels:
      app: blackbeard
  template:
    metadata:
      labels:
        app: blackbeard
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - mountPath: '/config'
          name: storage-volume
          subPath: radarr/config
        - mountPath: '/media-drive'
          name: streaming-volume
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
          name: http
        volumeMounts:
        - mountPath: '/config'
          name: storage-volume
          subPath: prowlarr/config
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8686
          name: http
        volumeMounts:
        - mountPath: '/config'
          name: storage-volume
          subPath: sonarr/config
        - mountPath: '/media-drive'
          name: streaming-volume
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd:latest
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: '/config'
          name: storage-volume
          subPath: sabnzbd/config
        - mountPath: '/media-drive'
          name: streaming-volume
          # subPath: blackbeard/sabnzbd/data/downloads
        # - mountPath: '/incomplete-downloads'
        #   name: streaming-volume
        #   subPath: blackbeard/sabnzbd/data/incomplete-downloads
      volumes:
        - name: radarr-config-volume
          configMap:
            name: blackbeard-radarr-config
        - name: prowlarr-config-volume
          configMap:
            name: blackbeard-prowlarr-config
        - name: sonarr-config-volume
          configMap:
            name: blackbeard-sonarr-config
        - name: streaming-volume
          nfs:
            server: 192.168.68.111
            path: /streaming
            readOnly: false
        - name: storage-volume
          persistentVolumeClaim:
            claimName: media-pvc
