kubernetes-cluster/manifests/apps/blackbeard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackbeard
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.org/websocket-services: "blackbeard"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - radarr.appchemy.co.za
    - sonarr.appchemy.co.za
    - prowlarr.appchemy.co.za
    - nzb.appchemy.co.za
    secretName: blackbeard-tls
  rules:
  - host: radarr.appchemy.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blackbeard
            port:
              number: 7878
  - host: sonarr.appchemy.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blackbeard
            port:
              number: 8686
  - host: prowlarr.appchemy.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blackbeard
            port:
              number: 9696
  - host: nzb.appchemy.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blackbeard
            port:
              number: 8080
---




# curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="server --disable=traefik --flannel-backend=host-gw --tls-san=192.168.68.108 --bind-address=192.168.68.108 --advertise-address=192.168.68.108 --node-ip=192.168.68.108 -—token=K10a1040edc168dc2995c8cbcd25e3b8298cdddb01867f47d0b6dd197aea4aa0a46::server:ccab4104ea52be96cf42b2da145bef32 --cluster-init" sh -s -
